[package]
name = "aerosync-rendezvous"
description = "Self-hostable WAN rendezvous server (RFC-004, v0.4 scaffold)"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "aerosync_rendezvous"
path = "src/lib.rs"

[[bin]]
name = "aerosync-rendezvous"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1"] }
clap = { version = "4", features = ["derive", "env"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
