[package]
name = "aerosync-rendezvous"
description = "Self-hostable WAN rendezvous server (RFC-004, v0.4 scaffold)"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "aerosync_rendezvous"
path = "src/lib.rs"

[[bin]]
name = "aerosync-rendezvous"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", default-features = false, features = ["json", "tokio", "http1", "query", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["pem"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
governor = { version = "0.6", default-features = true }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid.workspace = true

[dev-dependencies]
rand = "0.8"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.5"
